# NUCLEO-F767ZI-test

./: .gitignore  .mxproject  .project  CMakeCache.txt  CMakeLists.txt  NUCLEO-F767ZI-test.ioc  build.ninja  cmake_install.cmake  compile_commands.json
Core/Inc/: RTE_Components.h  pid.h  stm32f7xx_hal_conf.h  stm32f7xx_nucleo_conf.h  usart.h
Core/Inc/Backup/: main.h.bak  stm32f7xx_nucleo_bus.h.bak  stm32f7xx_nucleo_errno.h.bak
Core/Src/: adc.c  i2c.c  main.c  pid.c  stm32f7xx_nucleo_bus.c  tim.c  usart.c
Core/Src/Backup/: gpio.c.bak  i2c.c.bak  main.c.bak  spi.c.bak  stm32f7xx_hal_msp.c.bak
cmake/stm32cubemx/: CMakeLists.txt
